remove closing link tag

--- a/BinarySearchTree.html
+++ b/BinarySearchTree.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link type="text/css" rel="stylesheet" href="./css/bst.css"></link>
+        <link type="text/css" rel="stylesheet" href="./css/bst.css">
         <script src="./js/binary_search_tree.js"></script>
     </head>
     <body>
